2010-08-25  Michael Saboff  <msaboff@apple.com>

Reviewed by Sam Weinig.

        Remove the single entry regular expression cache introduced as part of
        the fix for https://bugs.webkit.org/show_bug.cgi?id=41238.
        The performance problem in Dromaeo that initiated that bug is no
        longer present. Dromaeo has been modified so that the regular
        expression tests are somewhat random and don't benefit from a
        single entry cache.

        * runtime/RegExp.cpp:
        (JSC::RegExp::RegExp):
        (JSC::RegExp::match):
        * runtime/RegExp.h:

Canonical link: https://commits.webkit.org/56810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66031 268f45cc-cd09-0410-ab3c-d52691b4dbfc